unpackaged/main/default/objects/Operations_Region_TS_Role__mdt/Operations_Region_TS_Role__mdt.object-meta.xml
<CustomObject>
    <description>Used to populate TS user role based on Operations Region to which associated store (through location code) belong</description>
    <label>Operations Region TS Role</label>
    <pluralLabel>Operations Region TS Roles</pluralLabel>
</CustomObject>