unpackaged/main/default/objects/Operations_Region_TS_Role__mdt/fields/Operations_Region__c.field-meta.xml
<CustomField>
    <fullName>Operations_Region__c</fullName>
    <label>Operations Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>