unpackaged/main/default/objects/Operations_Region_TS_Role__mdt/fields/Trade_Specialist_Role__c.field-meta.xml
<CustomField>
    <fullName>Trade_Specialist_Role__c</fullName>
    <label>Trade Specialist Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>