unpackaged/main/default/objects/Operations_Region_TS_Role__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Operations_Region__c</columns>
    <columns>Trade_Specialist_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>